suppression des méthode inutiles des items