@@ -1,17 +1,18 @@
 package com.wayvi.wayitems.items;
 
 import com.wayvi.wayitems.WayItems;
+import com.wayvi.wayitems.modules.interfaces.BlockBreakBehavior;
+import de.tr7zw.nbtapi.NBTItem;
 import org.bukkit.Material;
 import org.bukkit.block.Block;
 import org.bukkit.entity.Player;
-import org.bukkit.entity.Entity;
-import org.bukkit.event.entity.EntityDamageByEntityEvent;
 import org.bukkit.inventory.ItemStack;
 import org.bukkit.inventory.meta.ItemMeta;
 
-import java.util.Arrays;
 
-public class KamikazeAxe extends SpecialItem {
+import java.util.List;
+
+public class KamikazeAxe extends SpecialItem implements BlockBreakBehavior {
 
 
     public KamikazeAxe(WayItems plugin) {
@@ -23,28 +24,19 @@ public class KamikazeAxe extends SpecialItem {
         block.getWorld().createExplosion(block.getLocation(), 4F, false);
     }
 
-
-
-    @Override
-    public void onHit(EntityDamageByEntityEvent event, Player player, Entity entity) {
-        // Pas de logique
-    }
-
-    @Override
-    public void onRightClick(Player player) {
-        // Pas de logique
-    }
-
     public ItemStack getItemStack() {
         ItemStack axe = new ItemStack(Material.DIAMOND_AXE);
+        NBTItem nbtItem = new NBTItem(axe);
+        nbtItem.setString("type", "kamikaze_axe");
         ItemMeta meta = axe.getItemMeta();
         if (meta != null) {
             meta.setDisplayName("§4Kamikaze Axe");
-            meta.setLore(Arrays.asList("§7An axe with a powerful explosion!"));
+            meta.setLore(List.of("§7An axe with a powerful explosion!"));
             axe.setItemMeta(meta);
         }
-        return axe;
+        return nbtItem.getItem();
     }
+
 
     @Override
     public String getName() {
